# agstack

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  QUICK-REFERENCE.md  README.md  TODOS.md  biome.json  docker-compose.yml  lefthook.yml  package.json.template  tsconfig.json
.claude/: settings.json
.claude/agents/: CLAIMS.md  TEAM-RULES.md  _template.md  agent-api-go.md  agent-api-python.md  agent-api.md  agent-frontend.md  agent-jobs.md  agent-product-design.md  agent-ux.md
.claude/hooks/: self-review.sh  track-changes.sh
.claude/rules/: anti-hallucination.md  discipline.md  git-workflow.md  gitnexus.md  security.md
.claude/scripts/: merge-status.sh
agile/: BACKLOG.md  DEFINITION-OF-DONE.md  VELOCITY.md
agile/sprints/: current.md
agile/templates/: retro.md  sprint.md
api/: jest.config.ts  jest.e2e.config.ts  package.json.template  tsconfig.json
api/prisma/: schema.prisma
api/src/: app.module.ts  main.ts
api/test/: test-utils.ts
docs/: PRD.md  ux-guide.md  workflow-diagram.mermaid  workflow-team-diagram.mermaid
docs/decisions/: 001-backend-framework-strategy.md  (+6 more)
frontend/: index.html  package.json.template  tsconfig.json  vite.config.ts  vitest.config.ts
materials/: README.md
scripts/: bootstrap.sh  scaffold-clean.sh  scaffold-generate.sh  sync-components.sh
shared/: tsconfig.json
templates/backend-python/: Dockerfile  README.md  pyproject.toml
templates/backend-python/app/: main.py
templates/backend-python/app/db/: engine.py
templates/backend-python/app/routers/: health.py
(+137 files in other folders)
